--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -5,13 +5,9 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <style>
-      table {
-        border-collapse: collapse; border: none;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../../../../login.css">
   </head>
-  <body>
+  <body onload="onLoad()">
     <form action="/services/authentication/login">
       <input type="hidden" autocomplete="off" id="organization-id" name="organization-id" value="__organization-id__">
       <input type="hidden" autocomplete="off" id="project-id" name="project-id" value="__project-id__">
@@ -27,5 +23,6 @@
       </table>
       <input type="submit" value="Submit">
     </form>
+    <script src="../../../../login.js"></script>
   </body>
 </html>
