--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -1,7 +1,8 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Login</title>
+    <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
@@ -21,6 +22,7 @@
         <tr><td>password</td><td><input type="password" id="password" name="password"></td></tr>
         <tr><td>scope</td><td><input type="text" id="scope" name="scope" value="__scope__"></td></tr>
       </table>
+      <div id="roles-and-scope-selector"></div>
       <input type="submit" value="Submit">
     </form>
     <script src="../../../../login.js"></script>
