--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -8,21 +8,23 @@
     <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" type="text/css" href="../../../../login.css">
   </head>
-  <body onload="onLoad()">
-    <form action="__context-path__/services/authentication/__organization-id__/__project-id__/login">
+  <body onload="onLoad();">
+    <h1>Login</h1>
+    <form action="__context-path__/services/authentication/__organization-id__/__project-id__/consent">
       <input type="hidden" autocomplete="off" id="response-type" name="response-type" value="__response-type__">
       <input type="hidden" autocomplete="off" id="client_id" name="client_id" value="__client_id__">
       <input type="hidden" autocomplete="off" id="redirect_uri" name="redirect_uri" value="__redirect_uri__">
       <input type="hidden" autocomplete="off" id="state" name="state" value="__state__">
       <input type="hidden" autocomplete="off" id="random" name="random" value="__random__">
+      <input type="hidden" autocomplete="off" id="scope" name="scope" value="__scope__">
       <table>
         <tr><td>username</td><td><input type="text" id="username" name="username"></td></tr>
         <tr><td>password</td><td><input type="password" id="password" name="password"></td></tr>
-        <tr><td>scope</td><td><input type="text" id="scope" name="scope" value="__scope__"></td></tr>
       </table>
       <div id="roles-and-scope-selector"></div>
       <input type="submit" value="Submit">
     </form>
+    <a href="__context-path__/services/authentication/__organization-id__/__project-id__/sign-up">sign up</a>
     <script src="../../../../login.js"></script>
   </body>
 </html>
