#12 unit tests fixed

--- a/iam-service/src/main/resources/html/consent-form.html
+++ b/iam-service/src/main/resources/html/consent-form.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../../../../consent.css">
   </head>
   <body onload="onLoad();">
+    <div class="main-wrapper">
     <h1>Consent</h1>
     <div id="scopes-selector">
     </div><br/>
@@ -19,6 +20,7 @@
       <input type="hidden" autocomplete="off" id="scope" name="scope" value="">
       <input type="submit" value="Submit">
     </form>
+    </div>
     <script>
       var available_scopes = "__available_scopes__";
     </script>
