--- a/iam-service/src/main/resources/html/login-error.html
+++ b/iam-service/src/main/resources/html/login-error.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../../../../login-error.css">
 </head>
 <body>
+<div class="main-wrapper">
 <h2>Error: Login Failed !</h2>
+</div>
 </body>
 </html>
