--- a/iam-service/src/main/resources/html/signup-form.html
+++ b/iam-service/src/main/resources/html/signup-form.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" type="text/css" href="../../../../signup.css">
 </head>
 <body onload="onLoad();">
+<div class="main-wrapper">
 <h1>Sign-Up</h1>
 <form action="__context-path__/services/authentication/__organization-id__/__project-id__/login">
     <input type="hidden" autocomplete="off" id="random" name="random" value="__random__">
 </form>
+</div>
 <script src="../../../../signup.js"></script>
 </body>
 </html>
