added bootstrap to ui

--- a/iam-service/src/main/resources/html/consent-form.html
+++ b/iam-service/src/main/resources/html/consent-form.html
@@ -6,7 +6,8 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" type="text/css" href="../../../../consent.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../../../../favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="../../../../bootstrap.min.css">
   </head>
   <body onload="onLoad();">
     <div class="main-wrapper">
@@ -25,5 +26,7 @@
       var available_scopes = "__available_scopes__";
     </script>
     <script src="../../../../consent.js"></script>
+    <script src="../../../../jquery-3.5.1.min.js"></script>
+    <script src="../../../../bootstrap.min.js"></script>
   </body>
 </html>
