--- a/iam-service/src/main/resources/html/login-error.html
+++ b/iam-service/src/main/resources/html/login-error.html
@@ -6,11 +6,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" type="text/css" href="../../../../login-error.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../../../../favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="../../../../bootstrap.min.css">
 </head>
 <body>
 <div class="main-wrapper">
 <h2>Error: Login Failed !</h2>
 </div>
+<script src="../../../../jquery-3.5.1.min.js"></script>
+<script src="../../../../bootstrap.min.js"></script>
 </body>
 </html>
