--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -6,7 +6,8 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" type="text/css" href="../../../../login.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../../../../favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="../../../../bootstrap.min.css">
   </head>
   <body onload="onLoad();">
     <div class="main-wrapper">
@@ -28,5 +29,7 @@
     </div>
     <a href="__context-path__/services/authentication/__organization-id__/__project-id__/sign-up">sign up</a>
     <script src="../../../../login.js"></script>
+    <script src="../../../../jquery-3.5.1.min.js"></script>
+    <script src="../../../../bootstrap.min.js"></script>
   </body>
 </html>
