--- a/iam-service/src/main/resources/html/signup-form.html
+++ b/iam-service/src/main/resources/html/signup-form.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title>sign-up</title>
     <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" type="text/css" href="../../../../signup.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../../../../favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="../../../../bootstrap.min.css">
 </head>
 <body onload="onLoad();">
 <div class="main-wrapper">
@@ -16,5 +17,7 @@
 </form>
 </div>
 <script src="../../../../signup.js"></script>
+<script src="../../../../jquery-3.5.1.min.js"></script>
+<script src="../../../../bootstrap.min.js"></script>
 </body>
 </html>
