--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -14,9 +14,12 @@
 
     <div id="login-container" class="container">
       <h1>Login</h1>
+      <div class="form-group">
       <input id="username-input" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+      </div>
+      <div class="form-group">
       <input id="password-input" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
-      <br/>
+      </div>
       <button type="button" class="btn btn-primary" onclick="submitLogin()">Login</button>
       <button type="button" class="btn btn-primary" onclick="onStartSignUp()">Sign Up</button>
     </div>
