--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -33,9 +33,8 @@
 
     <div id="consent-container" class="container">
       <h1>Consent</h1>
-      <div id="scopes-selector">
-      </div>
-      <br/>
+      <form id="scopes-selector">
+      </form>
       <button type="button" class="btn btn-primary" onclick="submitConsent()">Confirm</button>
     </div>
 
