--- a/iam-service/src/main/resources/html/login-form.html
+++ b/iam-service/src/main/resources/html/login-form.html
@@ -50,6 +50,8 @@
       var redirect_uri    = "__redirect_uri__";
       var state           = "__state__";
       var scope           = "__scope__";
+      var code_challenge        = "__code_challenge__";
+      var code_challenge_method = "__code_challenge_method__";
     </script>
     <script src="../../../../jquery-3.5.1.min.js"></script>
     <script src="../../../../bootstrap.min.js"></script>
